<resources>
  <string name="pref_disable_account">Disable</string>
  <string name="pref_tunnel">Tunnel</string>
  <string name="pref_tunnel_host">Hostname</string>
  <string name="pref_tunnel_port">Port</string>
  <string name="pref_tunnel_mode">Mode</string>
  <string-array name="tunnel_mode_entries">
    <item>disabled</item>
    <item>3G only</item>
    <item>always</item>
    <item>auto</item>
  </string-array>
  <string name="incall_notif_active">正在音频呼叫</string>
  <string name="incall_notif_paused">暂停通话</string>
  <string name="incall_notif_video">正在进行视频采集通话</string>
  <string name="not_ready_to_make_new_call">没有准备好新的呼叫</string>
  <string name="bad_target_uri">无法联系 : %s</string>
  <string name="reset_sas_fmt">重置验证 %s</string>
  <string name="verify_sas_fmt">确认 %s</string>
  <string name="communication_encrypted">加密</string>
  <string name="waiting_for_startup">启动中…</string>
  <string name="couldnt_accept_call">接听通话时发生错误</string>
  <string name="error_adding_new_call">添加新的呼叫出错</string>
  <string name="transfer_started">开始转接</string>
  <string name="transfer_dialog_title">转移呼叫</string>
  <string name="transfer_to_new_call">新的呼叫</string>
  <string name="resume_dialog_title">恢复呼叫</string>
  <string name="cannot_resume_paused_by_remote_call">无法恢复远程调用</string>
  <string name="conf_show_details_text">查看详细</string>
  <string name="skipable_error_service_not_ready">警告：服务是没有准备好</string>
  <string name="close_button_text">关闭</string>
  <string name="status_conf_call">conf</string>
  <string name="status_active_call">active</string>
  <string name="state_paused">暂停</string>
  <string name="state_paused_by_remote">通过远程暂停</string>
  <string name="state_streams_running"></string>
  <string name="state_incoming_received">incoming</string>
  <string name="state_outgoing_ringing">铃声</string>
  <string name="state_outgoing_progress">calling</string>
  <string name="mutemic_button_txt">Mute</string>
  <string name="speaker_button_txt">扬声器</string>
  <string name="bluetooth_button_txt">蓝牙</string>
  <string name="CancelButtonText">取消</string>
  <string name="AddCallButtonText">添加通话</string>
  <string name="TransferCallButtonText">呼叫转移</string>
  <string name="conf_admin_choice_enter">进入会议</string>
  <string name="conf_admin_choice_leave">暂时离开会议</string>
  <string name="conf_admin_choice_terminate">会议结束</string>
  <string name="hangup">挂断</string>
  <string name="conf_simple_merge_bt_txt">合并</string>
  <string name="conf_simple_transfer_bt_txt">转移</string>
  <string name="conf_simple_video_bt_txt">视频</string>
  <string name="show_send_dtmfs_button">拨号盘</string>
  <string name="conf_conference">会议</string>
  <string name="in_conf">你是它的一部分</string>
  <string name="in_conf_leave">输出</string>
  <string name="out_conf">You are out of it</string>
  <string name="out_conf_enter">Go in</string>
  <string name="pref_audio_hacks_title">音频插件</string>
  <string name="pref_audio_use_specific_mode_title">使用特定的模式破解</string>
  <string name="pref_audio_use_specific_mode_summary">0=MODE_NORMAL (default), 2=MODE_IN_CALL</string>
  <string name="pref_audio_hacks_use_routing_api_title">使用路由API破解</string>
  <string name="pref_audio_hacks_use_galaxys_hack_title">使用Galaxy S的音频破解</string>
  <string name="pref_audio_soft_volume_title">软件的使用量</string>
  <string name="pref_ipv6_title">使用IPv6代替IPv4</string>
  <string name="error_while_accepting_pending_call">接受等待受理错误</string>
  <string name="incoming_call_dialog_title">%s 呼叫您</string>
  <string name="accept">接听</string>
  <string name="decline">拒绝</string>
  <string name="unknown_incoming_call_name">未知</string>
  <string name="pref_network_title">网络</string>
  <string name="pref_transport">转移</string>
  <string name="pref_transport_udp">UDP</string>
  <string name="pref_transport_tcp">TCP</string>
  <string name="pref_transport_tls">TLS</string>
  <string name="pref_transport_use_random_ports">使用随机端口</string>
  <string name="pref_sip_port_title">使用SIP端口</string>
  <string name="at_least_a_protocol">At least one item is required</string>
  <string name="first_launch_ok">注册成功</string>
  <string name="error">出错</string>
  <string name="click_to_show_first_login_view">开始</string>
  <string name="dialer_null_on_new_intent">应用程序没有准备好</string>
  <string name="pref_add_account">添加账号</string>
  <string name="no_phone_numbers">没有找到电话号码  %s</string>
  <string name="filter_contacts">筛选联系人</string>
  <string name="title_numbers_dialog">%s\'s 电话号码</string>
  <string name="pref_delete_account">删除此帐号</string>
  <string name="pref_default_account">使用默认</string>
  <string name="pref_echo_canceller_calibration">回声消除器校准</string>
  <string name="pref_video_use_front_camera_title">使用前置摄像头</string>
  <string name="pref_video">视频</string>
  <string name="pref_preferences">首选</string>
  <string name="pref_video_codecs_title">编解码器</string>
  <string name="pref_preferred_video_size">首选视频大小</string>
  <string name="menu_videocall_back_to_dialer_title">显示拨号器</string>
  <string name="menu_videocall_switch_camera_title">前置/后置摄像头</string>
  <string name="menu_videocall_change_resolution_when_low_resolution">尝试高分辨率</string>
  <string name="menu_videocall_change_resolution_when_high_resolution">低分辨率</string>
  <string name="menu_videocall_change_resolution_title">改变分辨率</string>
  <string name="menu_videocall_toggle_camera_title">静音/取消静音摄像头</string>
  <string name="menu_videocall_toggle_camera_disable">禁用摄像头</string>
  <string name="menu_videocall_toggle_camera_enable">启用摄像头</string>
  <string name="menu_videocall_terminate_call_title">通话结束</string>
  <string name="pref_video_settings_title">视频设置</string>
  <string name="pref_video_automatically_share_my_video_title">分享我的相机</string>
  <string name="pref_video_automatically_accept_video_title">接受传入视频的请求</string>
  <string name="pref_video_automatically_share_my_video">自动发送我的相机</string>
  <string name="pref_video_automatically_accept_video">始终接受视频请求</string>
  <string name="pref_video_initiate_call_with_video_title">发起视频通话</string>
  <string name="pref_video_initiate_call_with_video">总是发送视频请求</string>
  <string name="pref_video_enable_title">启用视频</string>
  <string name="pref_animation_enable_title">启用动画</string>
  <string name="pref_escape_plus">Replace + by 00</string>
  <string name="pref_ilbc_summary">根据ARM处理器和Android操作系统版本的iLBC可能不可用。</string>
  <string name="pref_echo_cancellation">消除回声</string>
  <string name="pref_autostart">开机启动时间</string>
  <string name="pref_enable_outbound_proxy">出站代理</string>
  <string name="pref_codecs">编解码器</string>
  <string name="pref_communication_expire_title">通信超时</string>
  <string name="pref_incoming_expire_title">来电超时</string>
  <string name="pref_video_port_title">视频端口或端口范围</string>
  <string name="pref_audio_port_title">音频端口或端口范围</string>
  <string name="pref_video_port_description">视频端口或端口范围(minport-maxport)</string>
  <string name="pref_audio_port_description">音频端口或端口范围(minport-maxport)</string>
  <string name="pref_incoming_call_timeout_title">来电超时（秒）</string>
  <string name="place_call_chooser">拨打电话</string>
  <string name="pref_adaptive_rate_control">自适应速率控制</string>
  <string name="pref_adaptive_rate_algorithm">自适应速率算法</string>
  <string name="pref_codec_bitrate_limit">编解码器比特率限制</string>
  <string-array name="limit_bitrate_entries">
    <item>10 kbits/s</item>
    <item>15 kbits/s</item>
    <item>20 kbits/s</item>
    <item>36 kbits/s</item>
    <item>64 kbits/s</item>
    <item>128 kbits/s</item>
  </string-array>
  <string name="pref_debug">Debug</string>
  <string name="about_report_issue">报告问题</string>
  <string name="about_bugreport_email_text">这里描述问题</string>
  <string name="about_error_generating_bugreport_attachement">生成错误报告</string>
  <string name="about_logs_not_found">没有找到日志。</string>
  <string name="about_reading_logs">阅读日志，可能需要一定的时间...</string>
  <string name="about_mailer_chooser_text">发送错误报告...</string>
  <string name="menu_about">关于</string>
  <string name="menu_send_log">发送日志</string>
  <string name="pref_audio">音频</string>
  <string name="menu_exit">退出</string>
  <string name="pref_prefix">Prefix</string>
  <string name="pref_advanced">高级</string>
  <string name="menu_settings">设置</string>
  <string name="pref_proxy">代理</string>
  <string name="pref_domain">域*</string>
  <string name="pref_passwd">密码*</string>
  <string name="pref_username">用户名*</string>
  <string name="pref_sipaccount">SIP账号</string>
  <string name="wrong_username">错误的用户名</string>
  <string name="wrong_passwd">错误的密码</string>
  <string name="wrong_domain">错误的域</string>
  <string name="wrong_settings">错误的设置</string>
  <string name="tab_dialer">拨号器</string>
  <string name="tab_contact">联系</string>
  <string name="call_error">不能打电话 %s</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="dismiss">解雇</string>
  <string name="cont">继续</string>
  <string name="never_remind">永不提醒我</string>
  <string name="config_error">%s, 你想去的设置页面?</string>
  <string name="ec_calibration_launch_message">启动取消回声音频校准 </string>
  <string name="warning_already_incall">Cannot initiate a new call because a call is already engaged</string>
  <string name="tab_history">历史</string>
  <string name="warning_wrong_destination_address">无法建立目标地址到 [%s]</string>
  <string name="menu_clear_history">清除</string>
  <string name="error_cannot_get_call_parameters">无法获取调用参数</string>
  <string name="error_cannot_create_default_parameters">无法创建默认调用的参数</string>
  <string name="error_cannot_invite_address">不能邀请目标地址 [%s]</string>
  <string name="notification_started">开始</string>
  <string name="pref_echo_cancellation_summary">消除另一端听到的回声</string>
  <string name="pref_stun_server">Stun server</string>
  <string name="pref_ice_enable">ICE启用</string>
  <string name="pref_ice_enable_summary">一个STUN服务器必须配置使用ICE</string>
  <string name="ec_calibrating">校准…</string>
  <string name="ec_calibrated">校准 [%s ms]</string>
  <string name="no_echo">无回声</string>
  <string name="failed">失败</string>
  <string name="first_login_explanation">输入您的用户名和密码连接到服务。</string>
  <string name="first_login_username">用户名</string>
  <string name="first_login_password">密码</string>
  <string name="first_login_connect">连接</string>
  <string name="first_launch_no_login_password">请输入您的用户名和密码</string>
  <string name="first_launch_bad_login_password">无法连接;检查您的登录名和密码，并重新开始</string>
  <string name="pref_amr_summary">AMR codec might not be present on your phone</string>
  <string name="pref_media_encryption">媒体加密</string>
  <string name="media_encryption_none">无</string>
  <string name="pref_video_codec_h264_unavailable">编解码器禁用，从源代码构建的应用程序来启用它</string>
  <string name="pref_video_codec_mpeg4_unavailable">编解码器禁用，从源代码构建的应用程序来启用它</string>
  <string name="pref_sipaccounts">SIP账号</string>
  <string name="pref_wifi_only">仅使用WIFI</string>
  <string name="chat">聊天</string>
  <string name="call">呼叫</string>
  <string name="add_to_contacts">添加到联系人</string>
  <string name="new_fast_chat">输入一个SIP地址聊天…</string>
  <string name="no_contact">您的地址簿无联系人.</string>
  <string name="no_sip_contact">您的地址簿无SIP联系人.</string>
  <string name="no_chat_history">没有聊天记录.</string>
  <string name="content_description_add_contact">添加到联系人按钮</string>
  <string name="content_description_chat"></string>
  <string name="content_description_dial_back"></string>
  <string name="content_description_delete"></string>
  <string name="content_description_new_discussion"></string>
  <string name="content_description_edit"></string>
  <string name="content_description_validate"></string>
  <string name="content_description_all_contacts"></string>
  <string name="content_description_linphone_contacts"></string>
  <string name="content_description_cancel"></string>
  <string name="button_new_chat">新的对话</string>
  <string name="button_edit">编辑</string>
  <string name="button_ok">确认</string>
  <string name="button_all_contacts">所有</string>
  <string name="button_sip_contacts">SIP</string>
  <string name="button_add_contact">新联系人</string>
  <string name="delete_contact">删除</string>
</resources>