<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/newDiscussion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/chat_new"
            android:contentDescription="@string/content_description_new_discussion"
            android:gravity="center"
            android:paddingTop="25dp"
            android:scaleType="centerCrop"
            android:text="@string/button_new_chat"
            android:textColor="@drawable/text_button" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/chat_edit"
            android:contentDescription="@string/content_description_edit"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/button_edit"
            android:textColor="@drawable/text_button" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/chat_ok"
            android:contentDescription="@string/content_description_validate"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/button_ok"
            android:textColor="@drawable/text_button"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/clearFastChatField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_cancel"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/list_delete" />

        <EditText
            android:id="@+id/newFastChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/clearFastChatField"
            android:background="@drawable/chat_fast_address_background"
            android:gravity="center"
            android:hint="@string/new_fast_chat"
            android:inputType="textEmailAddress"
            android:paddingRight="5dp"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null" />
    </RelativeLayout>

    <ListView
        android:id="@+id/chatList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@color/transparent"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />

    <TextView
        android:id="@+id/noChatHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_chat_history"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@drawable/text_color"
        android:visibility="gone" />

</LinearLayout>