<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:linphone="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/deleteContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/contact_delete"
            android:contentDescription="@string/content_description_delete"
            android:gravity="center"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:text="@string/delete_contact"
            android:textColor="@drawable/text_button" />

        <TextView
            android:id="@+id/editContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/contact_edit"
            android:contentDescription="@string/content_description_edit"
            android:gravity="center"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:text="@string/button_edit"
            android:textColor="@drawable/text_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp" >

        <org.linphone.ui.AvatarWithShadow
            android:id="@+id/contactPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            linphone:picture="@drawable/unknown_small" />

        <TextView
            android:id="@+id/contactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_contrast" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:stretchColumns="*" />
    </ScrollView>

</LinearLayout>